fb video commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-"Hello World" 
+<html>
+<head>
+  <title>Your Website Title</title> 
+</head>
+<body>
+
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v6.0"></script>
+
+  <div class="fb-video" data-href="https://www.facebook.com/trandaohuycuong/videos/2607813145994167/" data-width="auto" data-show-text="true"><blockquote 
+  cite="https://developers.facebook.com/trandaohuycuong/videos/2607813145994167/" class="fb-xfbml-parse-ignore">
+  <a href="https://developers.facebook.com/trandaohuycuong/videos/2607813145994167/"></a>
+  <p></p>Người đăng: <a href="https://www.facebook.com/trandaohuycuong">Cường Trần</a> vào Chủ nhật, 29 tháng 3, 2020</blockquote></div>
+
+</body>
+</html>
