--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <title>Your Website Title</title> 
 </head>
 <body>
-
+	
+   <iframe src="https://drive.google.com/file/d/1gSp6qG6MuR2oijFoYeHy_bCYvF6e8ihd/preview" width="640" height="480"></iframe>
+   
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v6.0"></script>
 
