--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
 </head>
 <body>
 	
-   <iframe src="https://drive.google.com/file/d/1gSp6qG6MuR2oijFoYeHy_bCYvF6e8ihd/preview" width="640" height="480"></iframe>
-   
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v6.0"></script>
-
-  <div class="fb-video" data-href="https://www.facebook.com/trandaohuycuong/videos/2607813145994167/" data-width="auto" data-show-text="true"><blockquote 
-  cite="https://developers.facebook.com/trandaohuycuong/videos/2607813145994167/" class="fb-xfbml-parse-ignore">
-  <a href="https://developers.facebook.com/trandaohuycuong/videos/2607813145994167/"></a>
-  <p></p>Người đăng: <a href="https://www.facebook.com/trandaohuycuong">Cường Trần</a> vào Chủ nhật, 29 tháng 3, 2020</blockquote></div>
+   <iframe src="https://drive.google.com/file/d/1gSp6qG6MuR2oijFoYeHy_bCYvF6e8ihd/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 </html>
