--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <html>
 <head>
-  <title>Your Website Title</title> 
+  <title>SVF</title> 
+  <style>
+	div {
+		text-align: center;
+		width: 100%;
+		vertical-align: middle;
+		height: 100%;
+		display: table-cell;
+	}
+	div,
+	body,
+	html {
+		height: 100%;
+		width: 100%;
+	}
+	body{
+		display: table;
+		height:100%;
+		width: 100%;
+	}
+  <style>
 </head>
-<body>
-	
-   <iframe src="https://drive.google.com/file/d/1gSp6qG6MuR2oijFoYeHy_bCYvF6e8ihd/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe>
 
+<body>
+	<div>
+		<iframe src="https://drive.google.com/file/d/1gSp6qG6MuR2oijFoYeHy_bCYvF6e8ihd/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe>
+	</div>
 </body>
 </html>
