--- a/index.html
+++ b/index.html
@@ -1,31 +1,18 @@
 <html>
 <head>
   <title>SVF</title> 
-  <style>
-	div {
-		text-align: center;
-		width: 100%;
-		vertical-align: middle;
-		height: 100%;
-		display: table-cell;
-	}
-	div,
-	body,
-	html {
-		height: 100%;
-		width: 100%;
-	}
-	body{
-		display: table;
-		height:100%;
-		width: 100%;
-	}
-  <style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="scripts.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<div>
+	<div class="movie">
 		<iframe src="https://drive.google.com/file/d/1gSp6qG6MuR2oijFoYeHy_bCYvF6e8ihd/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe>
+	</div>
+	<div class='console-container'>
+		<span>tdhcuong @ <span><span id='text'></span>
+		<div class='console-underscore' id='console'>&#95;</div>
 	</div>
 </body>
 </html>
