--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-	<div class="movie">
-		<iframe src="https://drive.google.com/file/d/1Uhu4qWCvB4Xl3nOGojCpL7EqKlfXQRRz/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe>
-	</div>
+	<div class="title">GOD BLESS YOU ALL</div>
+	<iframe src="" width="640" height="480" allowfullscreen="allowfullscreen"></iframe>
 	<div class='console-container'>
 		<span>tdhcuong @ <span><span id='text'></span>
 		<div class='console-underscore' id='console'>&#95;</div>
