--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
   <title>SVF</title> 
+  <meta property="og:title" content="SVF">
+  <meta property="og:description" content="Jesus">
+  <meta property="og:image" content="thumbnail.jpg">
+  <meta property="og:url" content="https://tdhcuong1093.github.io/">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
   <link rel="stylesheet" href="styles.css">
